--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,73 @@
 /* You can add global styles to this file, and also import other style files */
+/*@import "~swiper/swiper-bundle";*/
+
+.swiper-container {
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-button-prev, .swiper-button-next{
+   color: white !important;
+}
+
+.movie-description{
+  background-color: rgba(0,0,0,0.3);
+  bottom: 0;
+  padding: 5px 30px;
+  position: absolute;
+  width: 100%;
+}
+
+/*==========  ==========*/
+
+
+
+/*========================================
+      POSTER GRID
+===========================================*/
+
+h3 {
+  font-size: 15px;
+}
+.poster{
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  margin: 5px;
+}
+/*========== FIN POSTER GRID ==========*/
+
+body {
+  background-color: #14161E;
+}
+
+h1,h2,h3,h4,h5 {
+  font-weight: 200;
+  color: white;
+}
+
+p {
+  color: white;
+}
+
+hr{
+  color: white;
+}
+
+.navbar-brand {
+  font-weight: 200;
+  color: #bd4c5f !important;
+}
+
+.btn-outline-success {
+  border-color: #bd4c5f !important;;
+  color: #bd4c5f !important;;
+}
+
+.btn-outline-success:hover {
+  background-color: #272a36;
+  color: white !important;
+}
+
+.block {
+  display:block;
+}
